-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 RC 1
-
Component/s: Core: Other
-
Labels:None
-
Commits:553e216d891177ee0c2cea70bbd7f21103fc7795
Wouldn't it make sense to make the QCoreApplication::Type enumeration reflect the available application types in Qt 5, and propagate the getter from QApplication::type() to QCoreApplication::type()?
enum Type { Tty, GuiClient, GuiServer // # deprecated };
It could offer values like Tty(or even simply Core?),Gui,Widgets instead.
It is very confusing that currently QApplication::type() returns Tty when QGuiApplication was instantiated. As a side effect, instantiating QWidget in a GUI application throws a misleading fatal error:
#include <QtWidgets> int main( int argc, char* argv[]) { QGuiApplication a(argc,argv); QWidget w; // QWidget: Cannot create a QWidget when no GUI is being used w.show(); return a.exec(); }
- is related to
-
QTBUG-28076 Cannot use QGuiApplication to create GUI app: Cannot create a QWidget when no GUI is being used
-
- Closed
-